--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
+    android:background="#E9E8E7"
     android:layout_height="match_parent"
     android:layout_gravity="left"
     tools:context="samsung.membership.splash.MainActivity">
-
-
 
     <FrameLayout
         android:id="@+id/content_frame"
@@ -19,7 +18,17 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+            android:contentInsetStart="0dp"
+            android:minHeight="?attr/actionBarSize">
+
+            <TextView
+                android:textSize="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:text="New Channel"/>
+        </android.support.v7.widget.Toolbar>
 
         <ScrollView
             android:layout_marginTop="?attr/actionBarSize"
