--- a/app/src/main/res/layout/tab_fragment_2.xml
+++ b/app/src/main/res/layout/tab_fragment_2.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="This is Tab 2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+    <GridView
+        android:id="@+id/gridView1"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnWidth="100dp"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:verticalSpacing="10dp" />
+
+</LinearLayout>
