--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -22,7 +22,7 @@
     </android.support.v7.widget.Toolbar>
 
     <TextView
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:text="새로운 채널의 이름을 만들어 주세요."
         android:gravity="center"
         android:layout_width="wrap_content"
@@ -30,10 +30,10 @@
         android:ems="20"
         android:inputType="textPersonName"
         android:id="@+id/textView"
-        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="50dp"
+        android:layout_above="@+id/title"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="200dp" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/title"
