--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,11 +6,11 @@
 
     <ImageView
         android:id="@+id/splashscreen"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:src="@drawable/logo"
+        android:layout_marginTop="150dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="137dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
