--- a/app/src/main/res/layout/activity_add2.xml
+++ b/app/src/main/res/layout/activity_add2.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/voice_layout"
+        android:id="@+id/add2_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
