--- a/app/src/main/res/layout/closed_channel.xml
+++ b/app/src/main/res/layout/closed_channel.xml
@@ -9,48 +9,54 @@
         android:layout_width="match_parent"
         android:layout_height="500dp">
 
-        <TextView
-            android:id="@+id/closed_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#000000"
-            android:textColor="#d9d9d9"
-            android:paddingRight="20dp"
-            android:paddingLeft="20dp"
-            android:layout_gravity="center_horizontal"
-            android:text="Story Title"
-            android:layout_above="@+id/closed_date"
-            android:layout_centerHorizontal="true"
-            android:textSize="30dp" />
-
-        <TextView
-            android:id="@+id/closed_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="#000000"
-            android:textColor="#d9d9d9"
-            android:layout_gravity="center_horizontal"
-            android:paddingRight="60dp"
-            android:paddingLeft="60dp"
-            android:text="Story Date"
-            android:layout_centerHorizontal="true"
-            android:layout_above="@+id/closed_image"
-            android:textSize="22dp" />
-
-        <ImageView
-            android:id="@+id/closed_image"
+        <LinearLayout
+            android:id="@+id/container"
+            android:padding="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="100dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/closed_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/closed_date"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:background="#000000"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="Story Title"
+                android:textColor="#d9d9d9"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/closed_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/closed_image"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:background="#000000"
+                android:paddingLeft="60dp"
+                android:paddingRight="60dp"
+                android:text="Story Date"
+                android:textColor="#d9d9d9"
+                android:textSize="22dp" />
+
+            <ImageView
+                android:id="@+id/closed_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher" />
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
